--- a/src/App.css
+++ b/src/App.css
@@ -2,60 +2,70 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 h1 {
   font-weight: normal;
+  margin-bottom: 10px;
 }
 
 body {
-  background-color: #F1F1F1;
-  font-family: "Garamond";
+  background-color: #f5f2f0;
+  color: #3e4041;
+  font-family: "Cormorant Garamond";
+}
+
+.hebrew {
+  font-family: "Tinos";
+  font-weight: normal;
+  letter-spacing: 1px;
 }
 
 .body {
   margin: auto;
 }
-@media (min-width: 780px) {
+/* @media (min-width: 780px) {
   .body {
       width: 80%;
   }
 }
-@media (min-width: 1340px) {
+@media (min-width: 500px) {
   .body {
-      max-width: 1260px;
+      max-width: 500px;
+  }
+} */
+
+.hidden {
+  display: none;
+}
+
+.container {
+  padding: 0 30px;
+}
+
+
+@media (min-width: 992px) {
+  .container {
+      min-width: 970px;
+      margin: auto;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+      width: 690px;
+      margin: auto;
+  }
+}
+
+
+a {
+  color: #978f86;
+  text-decoration: none;
+}
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
   }
 }
