padding changes and backgground test

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@ h1 {
 }
 
 body {
-  background-color: #f5f2f0;
+  /* background-color: #f5f2f0; */
+  background-color: purple;
   color: #3e4041;
   font-family: "Cormorant Garamond";
 }
