--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@ h1 {
 }
 
 body {
-  /* background-color: #f5f2f0; */
-  background-color: purple;
+  background-color: #f5f2f0;
   color: #3e4041;
   font-family: "Cormorant Garamond";
 }
