--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ h1 {
   margin-bottom: 10px;
 }
 
-body {
+html, body {
   background-color: #f5f2f0;
   color: #3e4041;
   font-family: "Cormorant Garamond";
@@ -22,16 +22,6 @@ body {
 .body {
   margin: auto;
 }
-/* @media (min-width: 780px) {
-  .body {
-      width: 80%;
-  }
-}
-@media (min-width: 500px) {
-  .body {
-      max-width: 500px;
-  }
-} */
 
 .hidden {
   display: none;
