--- a/src/pages/Registry/Registry.css
+++ b/src/pages/Registry/Registry.css
@@ -1,11 +1,11 @@
 .container.registry {
     margin-bottom: 80px;
-    padding-top: 80px;
+    padding-top: 100px;
     animation: 2s fadeIn;
 }
 @media (min-width: 768px) {
     .container.registry {
-        padding-top: 30px;
+        padding-top: 40px;
     }
 }
 
@@ -14,10 +14,13 @@
     padding-bottom: 35px;
 }
 
+.registry .bottom-links {
+    padding-top: 20px;
+}
+
 .registry .bottom-links a {
     display: block;
-    margin-bottom: 10px;
-    text-decoration: none;
+    margin-bottom: 20px;
     color: unset;
 }
 
