login page and loading style

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,15 @@ a {
   }
 }
 
+@keyframes fadeOut {
+  0% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+  }
+}
+
 input[type="text"] {
   font-size: 16px;
 }
