--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,6 +1,14 @@
 .login-page {
+    position: absolute;
+    height: -webkit-fill-available;
+    width: 100%;
     text-align: center;
-    margin-top: 200px;
+}
+
+.login-container {
+    position: relative;
+    top: 30%;
+    padding: 0 30px;
 }
 
 .login-page form {
@@ -16,7 +24,7 @@
     background: transparent;
     color: #3e4041;
     padding: 10px;
-    position: fixed;
+    position: absolute;
     cursor: pointer;
 }
 
