--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -22,7 +22,7 @@
 .login-page .login-submit {
     border: none;
     background: transparent;
-    color: #3e4041;
+    color: #3d4737;
     padding: 10px;
     position: absolute;
     cursor: pointer;
