--- a/src/components/NavBar/NavSmall.css
+++ b/src/components/NavBar/NavSmall.css
@@ -1,7 +1,7 @@
 .nav-bar {
     height: 50px;
     border-bottom: 0.5px solid #c8c4b7;
-    background: #f5f2f0;
+    background: #f1ede1;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,7 +35,7 @@
 .menu {
     position: absolute;
     z-index: 1000;
-    background: #f5f2f0;
+    background: #f1ede1;
     width: 100%;
     height: 100vh;
     border-bottom: 0.5px solid #c8c4b7;
