--- a/src/pages/RSVP/Guest.css
+++ b/src/pages/RSVP/Guest.css
@@ -1,6 +1,6 @@
 .guest {
     margin: 50px 0;
-    border-top: 0.5px solid #c8c4b7;
+    border-top: 0.5px solid #3d473721;
 }
 
 .guest .guest-name {
@@ -21,17 +21,20 @@
 .guest .response-button {
     margin-right: 5px;
     cursor: pointer;
-    
 }
 
 .guest .response-button input[type="radio"] + label {
     padding: 8px;
     cursor: pointer;
-    border: 0.5px solid #c8c4b7;
+    border: 0.5px solid #3d473721;
 }
 
 .guest .response-button input[type="radio"]:checked + label {
-    background-color: #c8c4b7;
+    background-color: #3d473721;
+}
+
+.guest .response-button input[type="radio"]:not(:checked) + label:hover {
+    background-color: #3d47370b;
 }
 
 .guest .diet {
@@ -81,7 +84,7 @@
     left: 0;
     height: 18px;
     width: 18px;
-    border: 0.5px solid #c8c4b7;
+    border: 1px solid #3d473721;
 }
 .guest .diet-option .checkmark:after {
     content: "";
@@ -99,7 +102,7 @@
     top: 0px;
     width: 4px;
     height: 10px;
-    border: solid #c8c4b7;
+    border: solid #3d4737;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
