--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -4,11 +4,17 @@
     padding-top: 30px;
 }
 
-.details a {
+.details a, .details button {
     text-decoration: underline solid 0.5px;
     padding: 0 4px;
     color: #978f86;
 }
-.details a:hover {
+.details button {
+    background: transparent;
+    border: none;
+    font-family: "Cardo";
+}
+.details a:hover, .details button:hover {
     color: #978f8690;
+    cursor: pointer;
 }
