--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -13,6 +13,7 @@
     background: transparent;
     border: none;
     font-family: "Cardo";
+    font-size: 1em;
 }
 .details a:hover, .details button:hover {
     color: #978f8690;
